Fixed styling, spacing and colours

--- a/frontend/src/styles/minStyle.css
+++ b/frontend/src/styles/minStyle.css
@@ -6,4 +6,22 @@
     .search_bar {
         max-width: 50vw;
     }
+
+    .header {
+        font-size: 11px;
+    }
+}
+
+@media (max-width: 366px) {
+    .member_list {
+        max-width: 50vw;
+    }
+
+    .search_bar {
+        max-width: 50vw;
+    }
+
+    .header {
+        font-size: 8px;
+    }
 }
